tests/ui/compile-fail/init/field_value_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail/init/field_value_wrong_type.rs:8:28
  |
8 |     let _ = init!(Foo { a: () });
  |                         -  ^^ expected `usize`, found `()`
  |                         |
  |                         arguments to this function are incorrect
  |
note: function defined here
 --> $RUST/core/src/ptr/mod.rs
  |
  | pub const unsafe fn write<T>(dst: *mut T, src: T) {
  |                     ^^^^^
